Closed
Bug 1367806
Opened 9 years ago
Closed 9 years ago
Crash in PostToPluginThread
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(firefox-esr52 unaffected, firefox53 unaffected, firefox54 unaffected, firefox55 fixed)
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | --- | fixed |
People
(Reporter: calixte, Assigned: handyman)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression, Whiteboard: [clouseau])
Crash Data
Attachments
(1 file)
|
1.29 KB,
patch
|
jimm
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-72b85d41-f83c-46b3-bc62-4867e0170525.
=============================================================
There are 11 crashes (from the same installation) in nightly 55 with buildid 20170525030225. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1363290.
[1] https://hg.mozilla.org/mozilla-central/rev?node=1da418fade04a81632e3057adea1dfde1a57323d
Flags: needinfo?(davidp99)
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → davidp99
Flags: needinfo?(davidp99)
| Assignee | ||
Comment 1•9 years ago
|
||
Cut-and-paste manual refcount bug from patches from bug 1363290. The issue is obvious (use-after-forget).
Simple STR:
1. Go to http://www.tinywebgallery.com/en/tfu/web_demo2.php
2. Click "Add Files"
3. Choose a small image to upload.
Expected:
Plugin shows the file in the upload queue.
Actual:
CRASH! Plugin Process crash dialog is shown.
Attachment #8871911 -
Flags: review?(jmathies)
| Assignee | ||
Comment 2•9 years ago
|
||
Comment 3•9 years ago
|
||
This is the #4 Windows topcrash in Nightly 20170526030203.
Updated•9 years ago
|
Attachment #8871911 -
Flags: review?(jmathies) → review+
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/fe7cead49195
Fix ref counting of tasks for remoted Win32 methods in plugin processes. r=jimm
Keywords: checkin-needed
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•