Bug 1367806 - Fix ref counting of tasks for remoted Win32 methods in plugin processes. r=jimm

We were using the task after we .forget() it.